# Discrete-Geometry

./: .gitignore  README.md  main.cpp
TP1/: TP1.md
TP_Invariants/: CMakeLists.txt  TP_invariants.md  main.cpp
TP_RiceGrains/: CMakeLists.txt  main.cpp
